<resources>
    <string name="app_name">InternIntelligence_MovieApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="saved">Saved</string>
    <string name="downloads">Downloads</string>
    <string name="me">Me</string>
</resources>